--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,11 @@ h1, h2, h3, h4, h5, h6 {
 	white-space: nowrap;
 }
 
+.highlighttext {
+	color : #4bad5b;
+	font-weight: bold;
+}
+
 .slider-btn {
 	background-color:#73359b;
 	color: #FFF;
